# automatizacao2

./: README.md  pyproject.toml
.github/workflows/: automacao.yaml
projeto1/: app.py  dados_tratados.csv  requirements.txt
projeto1/Python/: etl.py
projeto1/rsconnect-python/: projeto1.json
